fix: ajuste do botão 'entrar' e sobreposição z-index

--- a/Frontend/src/components/HomeScreen/PopupLogin.css
+++ b/Frontend/src/components/HomeScreen/PopupLogin.css
@@ -5,6 +5,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 5; /*1*/
     transform: translate(-50%, -50%) scale(0.9);
     text-align: center;
     padding: 0 30px 30px;
@@ -113,7 +114,7 @@
 #signin{
     width: 170%;
     margin-top: 20px;
-    margin-left: 250%;
+    margin-left: 210%; /*2*/
     padding: 8px 0;
     background: #6fd649;
     list-style: none;
@@ -128,4 +129,6 @@
 #signin a{
     color: white;
     text-decoration: none;
+    position: relative;
+    left: 10px; /*3*/
 }
